<?xml version="1.0" encoding="utf-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>
	<groupId>com.xuchg</groupId>
	<artifactId>MDNotePad</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>

		<!--lombok插件 -->
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <version>1.18.4</version>
		    <scope>provided</scope>
		</dependency>


		<!--fastjson依赖 -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>[1.2.31,)</version>
		</dependency>

		<!-- 日志 -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<!--javafx application package -->
			<plugin>
				<groupId>com.zenjava</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>8.8.3</version>
				<configuration>
					<!--启动类 -->
					<mainClass>com.xuchg.MainApplication</mainClass>
					<!--运行文件名 -->
					<appName>MDNotePad</appName>
					<!--启用自定义打包配置 -->
					<verbose>true</verbose>
					<!--菜单图标 -->
					<needMenu>true</needMenu>
					<!--桌面图标 -->
					<needShortcut>true</needShortcut>
					<!--JVM参数 -->
					<jvmArgs>
						<jvmArg>-Xms50M</jvmArg>
						<jvmArg>-Xmx100M</jvmArg>
						<jvmArg>-XX:MaxPermSize=100M</jvmArg>
						<jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
						<jvmArg>-Dvisualvm.display.name=MDNotePad</jvmArg>
					</jvmArgs>
					<!--安装配置项 -->
					<bundleArguments>
						<installdirChooser>true</installdirChooser>
					</bundleArguments>
					<!--允许所有权限 -->
					<allPermissions>true</allPermissions>
					<!--版本信息 -->
					<nativeReleaseVersion>v1.0.0</nativeReleaseVersion>
					<!--说明信息 -->
					<description>
						MDNotePad
					</description>
				</configuration>
			</plugin>
			<plugin>  
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-compiler-plugin</artifactId>  
                <version>3.1</version>  
                <configuration>  
                    <source>1.8</source>  
                    <target>1.8</target>  
                </configuration>  
            </plugin>  

		</plugins>
	</build>

</project>
